# quasar-eq

./: .clang-format  .gitignore  CMakeLists.txt
Resources/: CMakeLists.txt
Source/: CMakeLists.txt  PathProducer.h  VisualizerComponent.h  config.h  juce_LookAndFeel.h  juce_PluginEditor.h  juce_PluginProcessor.cpp  unit.h  zlth_dsp_filter.h  zlth_dsp_gain.h  zlth_fifo.h  zlth_simd.h
